# talk

./: README.md  pyproject.toml
back_end/: __main__.py
front_end/: README.md  index.html  script.js
