[tool.poetry]
name = "back_end"
version = "0.1.0"
description = ""
authors = ["chrisbrake <chris.brake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
whitenoise = "^4.1"
falcon = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
